--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -29,7 +29,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="{{ BASE_PATH }}">{{ site.title }}</a>
+          <a class="brand" href="{{ site.baseurl }}">{{ site.title }}</a>
           <ul class="nav">
             <!--{% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
