--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -29,7 +29,7 @@
     <div class="topbar">
       <div class="fill">
         <div class="container">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+          <a class="brand" href="{{ site.site_root }}">{{ site.title }}</a>
           <ul class="nav">
             <!--{% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
@@ -50,7 +50,7 @@
       </div>
 
       <footer>
-        <p>&copy; <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>, {{ site.author.name }} &  
+        <p>&copy; <a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a>, {{ site.author.name }} 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
         </p>
